--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/premium-design-system.css">
     <link rel="stylesheet" href="css/4d-animations.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/critical-fixes.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -896,6 +897,7 @@
     </footer>
 
     <!-- JavaScript Files -->
+    <script src="js/critical-fixes.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r159/three.min.js"></script>
     <script src="js/performance-optimizer.js"></script>
     <script src="js/premium-core.js"></script>
